force-app/main/default/objects/Shared_Solar_System__c/fields/Perch_Mngd_Managed_Resi_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Perch_Mngd_Managed_Resi_Capacity__c</fullName>
    <formula>IF (Management_Revenue_Start_Date__c &lt;= TODAY(), Perch_Mngd_Forecasted_Resi_Capacity__c, NULL)</formula>
    <inlineHelpText>If Management Revenue Start Date is in the past, then shows Forecasted capacity, otherwise blank</inlineHelpText>
    <label>Perch Mngd Managed Resi Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>