force-app/main/default/objects/Shared_Solar_System__c/fields/Picklist__c.field-meta.xml
<CustomField>
    <fullName>Picklist__c</fullName>
    <description>This is the name of the entity that we are servicing a shared solar system on behalf of.</description>
    <inlineHelpText>This is the name of the entity that we are servicing a shared solar system on behalf of.</inlineHelpText>
    <label>Servicing on behalf of</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>BlueWave</fullName>
                
                
                    <label>BlueWave</label>
                
                </value>
            
                <value>
                
                    <fullName>NextSun</fullName>
                
                
                    <label>NextSun</label>
                
                </value>
            
                <value>
                
                    <fullName>AMP</fullName>
                
                
                    <label>AMP</label>
                
                </value>
            
                <value>
                
                    <fullName>Ameresco</fullName>
                
                
                    <label>Ameresco</label>
                
                </value>
            
                <value>
                
                    <fullName>Norton Development</fullName>
                
                
                    <label>Norton Development</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>