force-app/main/default/objects/Shared_Solar_System__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Primary customer product.</inlineHelpText>
    <label>Default Enrollment Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Shared Solar Systems</relationshipLabel>
    <relationshipName>Shared_Solar_Systems</relationshipName>
    <type>Lookup</type>
</CustomField>