force-app/main/default/objects/Shared_Solar_System__c/fields/Project_Capacity_Available_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Project_Capacity_Available_kW_DC__c</fullName>
    <formula>Total_System_Size_kWh_DC__c -  Anchor_CS_Capacity_Committed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Capacity remaining on the project; Result of Total System Size - Total Committed Capacity</inlineHelpText>
    <label>Total Capacity not yet Committed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>