force-app/main/default/objects/Shared_Solar_System__c/fields/Project_Image__c.field-meta.xml
<CustomField>
    <fullName>Project_Image__c</fullName>
    <description>This is the project image that is displayed in the Customer Portal. It needs to be a link to an publicly accessible image.</description>
    <inlineHelpText>This is the project image that is displayed in the Customer Portal. It needs to be a link to an publicly accessible image.</inlineHelpText>
    <label>Project Image</label>
    <type>Url</type>
</CustomField>