force-app/main/default/objects/Shared_Solar_System__c/fields/Project_Information_short__c.field-meta.xml
<CustomField>
    <fullName>Project_Information_short__c</fullName>
    <description>This is the information that is displayed within the Project carousel in the Customer Portal, and is meant to be a short blurb to give info at a glance. Character count is purposefully kept smaller than the full information field.</description>
    <inlineHelpText>This is the information that is displayed within the Project carousel in the Customer Portal, and is meant to be a short blurb to give info at a glance.</inlineHelpText>
    <label>Project Information (short)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>