force-app/main/default/objects/Shared_Solar_System__c/fields/Project_Location_and_Customer_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Project_Location_and_Customer_Allocation__c</fullName>
    <description>Displayed in the CS Customer Disclosure Form</description>
    <inlineHelpText>Displayed in the CS Customer Disclosure Form</inlineHelpText>
    <label>Project Location and Customer Allocation</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>