force-app/main/default/objects/Shared_Solar_System__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <inlineHelpText>This field is used for ORU CDG Allocation Schedules.</inlineHelpText>
    <label>Project Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>