force-app/main/default/objects/Shared_Solar_System__c/fields/Project_View__c.field-meta.xml
<CustomField>
    <fullName>Project_View__c</fullName>
    <label>Project View</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>