force-app/main/default/objects/Shared_Solar_System__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XXXPublic</label>
    <type>Checkbox</type>
</CustomField>