force-app/main/default/objects/Shared_Solar_System__c/fields/Reacquisition_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Reacquisition_Start_Date__c</fullName>
    <inlineHelpText>The date at which acquisition is over and reacquisition begins, usually set by the first date at which an allocation schedule is accepted by the utility at 100%.</inlineHelpText>
    <label>Reacquisition Start Date</label>
    <type>Date</type>
</CustomField>