force-app/main/default/objects/Shared_Solar_System__c/fields/Reserved_Anchor_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Anchor_Capacity__c</fullName>
    <inlineHelpText>Manual input for Perch acquired reserved anchor and public offtake capacity when under Onboarding or Acquisition stage</inlineHelpText>
    <label>Perch Acq Reserved Anchor Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>