force-app/main/default/objects/Shared_Solar_System__c/fields/Reserved_Anchor_Capacity_Percent__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Anchor_Capacity_Percent__c</fullName>
    <formula>(Client_Acq_Reserved_Anchor_Capacity__c + Reserved_Anchor_Capacity__c )/  Total_System_Size_kWh_DC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reserved Anchor Capacity / Total System Size, used for information only (to compare to contracts that might specify an Anchor %). Change the Reserved Anchor Capacity value or the Total System Size to change this percentage.</inlineHelpText>
    <label>Reserved Anchor Capacity %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>