force-app/main/default/objects/Shared_Solar_System__c/fields/Reserved_Demand_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Demand_Capacity__c</fullName>
    <description>W-023397</description>
    <inlineHelpText>Manual input of Reserved Demand Capacity (as specified by the Average Demand Threshold on the Utility). Typically this should not exceed 40% of the total system size for NY projects, for example.</inlineHelpText>
    <label>Reserved Demand Capacity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>