force-app/main/default/objects/Shared_Solar_System__c/fields/Reserved_Demand_Capacity_Pct__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Demand_Capacity_Pct__c</fullName>
    <description>W-023397</description>
    <formula>Reserved_Demand_Capacity__c / Total_System_Size_kWh_DC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reserved Demand Capacity / Total System Size, used for information only. Typically this should not exceed 40%. Change the Reserved Demand Capacity value or the Total System Size to change this percentage.</inlineHelpText>
    <label>Reserved Demand Capacity %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>