force-app/main/default/objects/Shared_Solar_System__c/fields/RiskCalc_Minimum__c.field-meta.xml
<CustomField>
    <fullName>RiskCalc_Minimum__c</fullName>
    <label>RiskCalc Minimum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Moody_s_Ratings</valueSetName>
    </valueSet>
</CustomField>