force-app/main/default/objects/Shared_Solar_System__c/fields/Sales_Charge__c.field-meta.xml
<CustomField>
    <fullName>Sales_Charge__c</fullName>
    <description>For use in BCS.</description>
    <inlineHelpText>For use in BCS.</inlineHelpText>
    <label>Sales fee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>