force-app/main/default/objects/Shared_Solar_System__c/fields/Service_Territories__c.field-meta.xml
<CustomField>
    <fullName>Service_Territories__c</fullName>
    <label>Service Territories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Territories</valueSetName>
    </valueSet>
</CustomField>