force-app/main/default/objects/Shared_Solar_System__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <label>XXXService Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duke Energy Carolinas (DEC)</fullName>
            </value>
            <value>
                <fullName>Duke Energy Progress (DEP)</fullName>
            </value>
            <value>
                <fullName>NEMA</fullName>
            </value>
            <value>
                <fullName>SEMA</fullName>
            </value>
            <value>
                <fullName>WCMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>