force-app/main/default/objects/Shared_Solar_System__c/fields/Serviced_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Serviced_Capacity__c</fullName>
    <formula>IF(
NOT (ISPICKVAL(Billing_Anchors__c,&quot;Bluewave&quot;)),
Total_System_Size_kWh_DC__c - Anchor_Capacity_Reserved__c,
Total_System_Size_kWh_DC__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Perch services the anchor, anchor capacity is included, if not, the total size of the project minus the anchor capacity</inlineHelpText>
    <label>Serviced Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>