force-app/main/default/objects/Shared_Solar_System__c/fields/Special_Ledger_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Special_Ledger_Account_Number__c</fullName>
    <label>Special Ledger Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>