force-app/main/default/objects/Shared_Solar_System__c/fields/SSS_Update__c.field-meta.xml
<CustomField>
    <fullName>SSS_Update__c</fullName>
    <description>Triggers workflows</description>
    <label>SSS Update</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>