force-app/main/default/objects/Shared_Solar_System__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Pending</fullName>
                
                
                    <label>Pending</label>
                
                </value>
            
                <value>
                
                    <fullName>Onboarding</fullName>
                
                
                    <label>Onboarding</label>
                
                </value>
            
                <value>
                
                    <fullName>Acquisition</fullName>
                
                
                    <label>Acquisition</label>
                
                </value>
            
                <value>
                
                    <fullName>Management</fullName>
                
                
                    <label>Management</label>
                
                </value>
            
                <value>
                
                    <fullName>Inactive</fullName>
                
                
                    <label>Inactive</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>