force-app/main/default/objects/Shared_Solar_System__c/fields/Subscribers__c.field-meta.xml
<CustomField>
    <fullName>Subscribers__c</fullName>
    <inlineHelpText>Total # of Allocation Schedules assigned to Project</inlineHelpText>
    <label>Subscribers</label>
    <summarizedField>Schedule_Z__c.Subscriptions__c</summarizedField>
    <summaryFilterItems>
        <field>Schedule_Z__c.Status__c</field>
        <operation>equals</operation>
        <value>Billing</value>
    </summaryFilterItems>
    <summaryForeignKey>Schedule_Z__c.Shared_Solar_System__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>