force-app/main/default/objects/Shared_Solar_System__c/fields/System_Utility__c.field-meta.xml
<CustomField>
    <fullName>System_Utility__c</fullName>
    <label>Utility</label>
    <length>20</length>
    <type>Text</type>
</CustomField>