force-app/main/default/objects/Shared_Solar_System__c/fields/Total_Capacity_Committed_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Total_Capacity_Committed_Reserved__c</fullName>
    <formula>Capacity_Committed_kW_DC__c +  Pending_Small_CS_Capacity__c + Client_Acq_Committed_Small_CS_Capacity__c + Client_Acq_Reserved_Small_CS_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For Small CS. Perch Committed Capacity + Perch Reserved Capacity + Client Committed + Client Reserved</inlineHelpText>
    <label>Total Capacity Committed/Reserved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>