force-app/main/default/objects/Shared_Solar_System__c/fields/Total_CS_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_CS_Capacity__c</fullName>
    <label>Total CS Capacity (kW DC)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>