force-app/main/default/objects/Shared_Solar_System__c/fields/Total_CS_Capacity_kW_DC_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_CS_Capacity_kW_DC_Formula__c</fullName>
    <formula>IF(Perch_Acq_Reserved_Small_CS_Capacity__c &gt; 0, 
   Perch_Acq_Reserved_Small_CS_Capacity__c,
   Total_System_Size_kWh_DC__c - BLANKVALUE(Reserved_Anchor_Capacity__c, Anchor_Capacity_Reserved__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Replaced by Perch Acq Reserved Small CS Capacity.

Capacity set aside for Small CS subscriptions (Total System Size - Reserved Anchor Capacity). If Reserved Anchor Capacity is blank, we use the Committed Anchor Capacity instead</inlineHelpText>
    <label>XXXReserved Small CS Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>