force-app/main/default/objects/Shared_Solar_System__c/fields/Total_System_Size_kW_AC__c.field-meta.xml
<CustomField>
    <fullName>Total_System_Size_kW_AC__c</fullName>
    <inlineHelpText>Total system size in kW AC.</inlineHelpText>
    <label>Total System Size (kW AC)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>