force-app/main/default/objects/Shared_Solar_System__c/fields/Total_System_Size_MW_DC__c.field-meta.xml
<CustomField>
    <fullName>Total_System_Size_MW_DC__c</fullName>
    <description>This is used in the Conga Template for the Maine customer contract used in SSF. It converts the kW DC system size to MW by dividing it by 1000.</description>
    <formula>Total_System_Size_kWh_DC__c/1000</formula>
    <label>Total System Size MW DC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>