force-app/main/default/objects/Shared_Solar_System__c/fields/UCB__c.field-meta.xml
<CustomField>
    <fullName>UCB__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to determine if the project will be billed under UCB. It determines the communications the customer will receive (UCB vs non UCB)</inlineHelpText>
    <label>UCB</label>
    <type>Checkbox</type>
</CustomField>