force-app/main/default/objects/Shared_Solar_System__c/fields/UCB_First_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>UCB_First_Bill_Date__c</fullName>
    <label>UCB First Bill Date</label>
    <type>Date</type>
</CustomField>