force-app/main/default/objects/Shared_Solar_System__c/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <displayFormat>SSS-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Unique ID</label>
    <type>AutoNumber</type>
</CustomField>