force-app/main/default/objects/Shared_Solar_System__c/fields/Upcoming_Meter_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>Upcoming_Meter_Read_Date__c</fullName>
    <formula>CASE(MONTH(TODAY()),
1,
IF( TODAY()&gt; Meter_Reading_Schedule__r.January_Meter_Read_Date__c,Meter_Reading_Schedule__r.February_Meter_Read_Date__c,Meter_Reading_Schedule__r.January_Meter_Read_Date__c),
2,
IF( TODAY()&gt; Meter_Reading_Schedule__r.February_Meter_Read_Date__c,Meter_Reading_Schedule__r.March_Meter_Read_Date__c,Meter_Reading_Schedule__r.February_Meter_Read_Date__c),
3,
IF( TODAY()&gt; Meter_Reading_Schedule__r.March_Meter_Read_Date__c,Meter_Reading_Schedule__r.April_Meter_Read_Date__c,Meter_Reading_Schedule__r.March_Meter_Read_Date__c),
4,
IF( TODAY()&gt; Meter_Reading_Schedule__r.April_Meter_Read_Date__c,Meter_Reading_Schedule__r.May_Meter_Read_Date__c,Meter_Reading_Schedule__r.April_Meter_Read_Date__c),
5,
IF( TODAY()&gt; Meter_Reading_Schedule__r.May_Meter_Read_Date__c,Meter_Reading_Schedule__r.June_Meter_Read_Date__c,Meter_Reading_Schedule__r.May_Meter_Read_Date__c),
6,
IF( TODAY()&gt; Meter_Reading_Schedule__r.June_Meter_Read_Date__c,Meter_Reading_Schedule__r.July_Meter_Read_Date__c,Meter_Reading_Schedule__r.June_Meter_Read_Date__c),
7,
IF( TODAY()&gt; Meter_Reading_Schedule__r.July_Meter_Read_Date__c,Meter_Reading_Schedule__r.August_Meter_Read_Date__c,Meter_Reading_Schedule__r.July_Meter_Read_Date__c),
8,
IF( TODAY()&gt; Meter_Reading_Schedule__r.August_Meter_Read_Date__c,Meter_Reading_Schedule__r.September_Meter_Read_Date__c,Meter_Reading_Schedule__r.August_Meter_Read_Date__c),
9,
IF( TODAY()&gt; Meter_Reading_Schedule__r.September_Meter_Read_Date__c,Meter_Reading_Schedule__r.October_Meter_Read_Date__c,Meter_Reading_Schedule__r.September_Meter_Read_Date__c),
10,
IF( TODAY()&gt; Meter_Reading_Schedule__r.October_Meter_Read_Date__c,Meter_Reading_Schedule__r.November_Meter_Read_Date__c,Meter_Reading_Schedule__r.October_Meter_Read_Date__c),
11,
IF( TODAY()&gt; Meter_Reading_Schedule__r.November_Meter_Read_Date__c,Meter_Reading_Schedule__r.December_Meter_Read_Date__c,Meter_Reading_Schedule__r.November_Meter_Read_Date__c),
12,
IF( 
TODAY()&gt; Meter_Reading_Schedule__r.December_Meter_Read_Date__c,null,Meter_Reading_Schedule__r.December_Meter_Read_Date__c),
null)</formula>
    <label>Upcoming Meter Read Date</label>
    <type>Date</type>
</CustomField>