force-app/main/default/objects/Shared_Solar_System__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility</label>
    <referenceTo>Utility__c</referenceTo>
    <relationshipLabel>Shared Solar Systems</relationshipLabel>
    <relationshipName>Shared_Solar_Systems</relationshipName>
    <type>Lookup</type>
</CustomField>