force-app/main/default/objects/Shared_Solar_System__c/fields/Utility_NMC_Tariff__c.field-meta.xml
<CustomField>
    <fullName>Utility_NMC_Tariff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sizing Method</label>
    <referenceTo>Utility_NMC_Tariff__c</referenceTo>
    <relationshipLabel>Shared Solar Systems</relationshipLabel>
    <relationshipName>Shared_Solar_Systems</relationshipName>
    <type>Lookup</type>
</CustomField>