force-app/main/default/objects/Shared_Solar_System__c/fields/Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_ID__c</fullName>
    <inlineHelpText>Used on Allocation Schedules in National Grid NY</inlineHelpText>
    <label>Vendor ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>