force-app/main/default/objects/Shared_Solar_System__c/fields/Waitlist__c.field-meta.xml
<CustomField>
    <fullName>Waitlist__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this project is a waitlist. This will cause &quot;More info to come soon!&quot; to display in the Customer Portal.</inlineHelpText>
    <label>Waitlist</label>
    <type>Checkbox</type>
</CustomField>