force-app/main/default/objects/Shared_Solar_System__c/recordTypes/SSS_No_PM_Relationship.recordType-meta.xml
<RecordType>
    <fullName>SSS_No_PM_Relationship</fullName>
    <active>true</active>
    <label>SSS - No PM Relationship</label>
</RecordType>