force-app/main/default/objects/Shared_Solar_System__c/recordTypes/SSS_PM_Relationship.recordType-meta.xml
<RecordType>
    <fullName>SSS_PM_Relationship</fullName>
    <active>false</active>
    <label>SSS PM Relationship</label>
</RecordType>