force-app/main/default/objects/Shared_Solar_System__c/validationRules/Acquisition_Client_Gateway_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Acquisition_Client_Gateway_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Stage__c,&quot;Acquisition&quot;),
NOT(ISBLANK(Client_Account__c)),
ISBLANK(Client_Account__r.Payment_Gateway__c),
NOT(UCB__c)
)</errorConditionFormula>
    <errorMessage>When in the Acquisition stage, a non-UCB Shared Solar System&apos;s Client Account must have a Payment Gateway set</errorMessage>
</ValidationRule>