force-app/main/default/objects/Shared_Solar_System__c/validationRules/Acquisition_Estimated_COD_PTO_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Acquisition_Estimated_COD_PTO_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Stage__c),
ISPICKVAL(Stage__c,&quot;Acquisition&quot;),
OR (
ISBLANK(Estimated_COD_Date_Manual__c),
ISBLANK(Estimated_PTO_Date_MANUAL__c)
)
)</errorConditionFormula>
    <errorMessage>Cannot change status to acquisition without populating the Estimated COD and PTO dates</errorMessage>
</ValidationRule>