force-app/main/default/objects/Shared_Solar_System__c/validationRules/Acquisition_Maximum_Subscription_Require.validationRule-meta.xml
<ValidationRule>
    <fullName>Acquisition_Maximum_Subscription_Require</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Stage__c),
ISPICKVAL(Stage__c,&quot;Acquisition&quot;),
OR (
Maximum_Subscription_Capacity_kWDC__c = 0,
ISBLANK(Maximum_Subscription_Capacity_kWDC__c)
)
)</errorConditionFormula>
    <errorMessage>Cannot change status to acquisition without populating the Maximum Subscription KW DC field</errorMessage>
</ValidationRule>