force-app/main/default/objects/Shared_Solar_System__c/validationRules/Acquisition_Product_UNMC_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Acquisition_Product_UNMC_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Stage__c),
ISPICKVAL(Stage__c,&quot;Acquisition&quot;),
OR(
ISBLANK(Product__c),
ISBLANK(Utility_NMC_Tariff__c)
)
)</errorConditionFormula>
    <errorMessage>Cannot change status to acquisition without populating the Product and Sizing Method (credit value)</errorMessage>
</ValidationRule>