force-app/main/default/objects/Shared_Solar_System__c/validationRules/Acquisition_System_Size_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Acquisition_System_Size_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Stage__c),
ISPICKVAL(Stage__c,&quot;Acquisition&quot;),
OR (
Total_System_Size_kWh_DC__c = 0,
ISBLANK(Total_System_Size_kWh_DC__c)
)
)</errorConditionFormula>
    <errorMessage>Cannot change status to acquisition without populating the System Size KW DC field</errorMessage>
</ValidationRule>