force-app/main/default/objects/Shared_Solar_System__c/validationRules/Acquisition_Utility_LZ_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Acquisition_Utility_LZ_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Stage__c),
ISPICKVAL(Stage__c,&quot;Acquisition&quot;),
OR(
ISBLANK(Utility__c),
ISBLANK(Service_Territories__c)
)
)</errorConditionFormula>
    <errorMessage>Cannot change status to acquisition without populating the utility and load zone</errorMessage>
</ValidationRule>