force-app/main/default/objects/Shared_Solar_System__c/validationRules/Acquisition_Yield_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Acquisition_Yield_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Stage__c),
ISPICKVAL(Stage__c,&quot;Acquisition&quot;),
OR (
Expected_Yield_kWh_kW__c = 0,
ISBLANK(Expected_Yield_kWh_kW__c)
)
)</errorConditionFormula>
    <errorMessage>Cannot change status to acquisition without populating the Expected Yield field</errorMessage>
</ValidationRule>