force-app/main/default/objects/Shared_Solar_System__c/validationRules/Do_Not_Underwrite_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Underwrite_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Do_Not_Underwrite__c  = true &amp;&amp;
(Available_SMB_Underwriting_Method_Docs__c = true ||
 Available_SMB_Underwriting_Method_FICO__c = true)</errorConditionFormula>
    <errorMessage>If &quot;Do Not Underwrite&quot; is checked, no Available Underwriting Methods can also be checked</errorMessage>
</ValidationRule>