force-app/main/default/objects/Shared_Solar_System__c/validationRules/Lock_Utility.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Utility</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

 $CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true,

ISCHANGED( Utility__c ),/*utility is being changed*/

OR(
ISPICKVAL(Stage__c,&quot;Management&quot;),
ISPICKVAL(Stage__c,&quot;Acquisition&quot;)
) /*and it&apos;s being change to either Management or Acquisition*/
)</errorConditionFormula>
    <errorMessage>You cannot change the Utility on this shared solar system at this time. Please contact the Business Applications if this is needed.</errorMessage>
</ValidationRule>