force-app/main/default/objects/Shared_Solar_System__c/validationRules/Management_Open_Is_False.validationRule-meta.xml
<ValidationRule>
    <fullName>Management_Open_Is_False</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Stage__c),
ISPICKVAL(Stage__c,&quot;Management&quot;),
Open__c
)</errorConditionFormula>
    <errorMessage>Cannot change status to management without first closing the SSS for sales</errorMessage>
</ValidationRule>